force-app/main/default/objects/Proposal_Invoice__c/Proposal_Invoice__c.object-meta.xml
<CustomObject>
    <label>Proposal Invoice</label>
    <nameField>
        <displayFormat>INV-{00000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>