force-app/main/default/objects/Proposal_Invoice__c/fields/Accrual__c.field-meta.xml
<CustomField>
    <fullName>Accrual__c</fullName>
    <description>S-00402: Used in Voucher txt File</description>
    <formula>&quot;N&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrual</label>
    <type>Text</type>
</CustomField>