force-app/main/default/objects/Proposal_Invoice__c/fields/Accrual_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Accrual_Percentage__c</fullName>
    <description>S-00402: Used in Voucher txt File</description>
    <formula>&quot;100&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accrual %</label>
    <type>Text</type>
</CustomField>