force-app/main/default/objects/Proposal_Invoice__c/fields/Basis_Date__c.field-meta.xml
<CustomField>
    <fullName>Basis_Date__c</fullName>
    <formula>IF( ISNULL(Integration_Process_Date__c), TODAY() , Integration_Process_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Basis Date</label>
    <type>Date</type>
</CustomField>