force-app/main/default/objects/Proposal_Invoice__c/fields/Close_Status__c.field-meta.xml
<CustomField>
    <fullName>Close_Status__c</fullName>
    <label>Close Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>