force-app/main/default/objects/Proposal_Invoice__c/fields/Count_Status_Change_Dev__c.field-meta.xml
<CustomField>
    <fullName>Count_Status_Change_Dev__c</fullName>
    <description>Dev</description>
    <label>Count Status Change Dev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>