force-app/main/default/objects/Proposal_Invoice__c/fields/Disencumber_Remaining_PO_Balance__c.field-meta.xml
<CustomField>
    <fullName>Disencumber_Remaining_PO_Balance__c</fullName>
    <label>Disencumber Remaining PO Balance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>