force-app/main/default/objects/Proposal_Invoice__c/fields/Entry_Status__c.field-meta.xml
<CustomField>
    <fullName>Entry_Status__c</fullName>
    <label>Entry Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Postable</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
            <value>
                <fullName>Scheduled for Payment</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>