force-app/main/default/objects/Proposal_Invoice__c/fields/Final_Payment__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Payment</label>
    <type>Checkbox</type>
</CustomField>