force-app/main/default/objects/Proposal_Invoice__c/fields/Finance_PDF__c.field-meta.xml
<CustomField>
    <fullName>Finance_PDF__c</fullName>
    <formula>HYPERLINK(&quot;https://nyserda--newdev--c.visualforce.com/apex/CORE_NEISLowVolInvApprPDF_Page?id=&quot;&amp; Id, 
&quot;Finance PDF&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance PDF</label>
    <type>Text</type>
</CustomField>