force-app/main/default/objects/Proposal_Invoice__c/fields/Integration_Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Process_Date__c</fullName>
    <description>Date when Invoice was sent to Finance. Either via Batch Or Real-Time sending operations.</description>
    <label>Integration Process Date</label>
    <type>Date</type>
</CustomField>