force-app/main/default/objects/Proposal_Invoice__c/fields/Invoice_Month_And_Year__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Month_And_Year__c</fullName>
    <formula>CASE(MONTH( Project_Activity_Invoice_Month__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;) &amp; &quot; - &quot; &amp; TEXT(YEAR(Project_Activity_Invoice_Month__c))</formula>
    <label>Invoice Month And Year</label>
    <type>Text</type>
</CustomField>