force-app/main/default/objects/Proposal_Invoice__c/fields/Invoice_PDF__c.field-meta.xml
<CustomField>
    <fullName>Invoice_PDF__c</fullName>
    <formula>HYPERLINK(&quot;https://nyserda--c.na21.visual.force.com/apex/NYSUN_Invoice_PDF_Page?id=&quot;+Id, &quot;Open PDF&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice PDF</label>
    <type>Text</type>
</CustomField>