force-app/main/default/objects/Proposal_Invoice__c/fields/Invoice_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Submitted_Date__c</fullName>
    <description>Invoice submitted date</description>
    <label>Invoice Submitted Date</label>
    <type>Date</type>
</CustomField>