force-app/main/default/objects/Proposal_Invoice__c/fields/NEIS_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>NEIS_Gross_Amount__c</fullName>
    <description>Original Invoice Amount</description>
    <inlineHelpText>Original Invoice Amount</inlineHelpText>
    <label>NEIS Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>