force-app/main/default/objects/Proposal_Invoice__c/fields/NEIS_Invoice_External_Id__c.field-meta.xml
<CustomField>
    <fullName>NEIS_Invoice_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>NEIS Invoice External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>