force-app/main/default/objects/Proposal_Invoice__c/fields/Payee_Email__c.field-meta.xml
<CustomField>
    <fullName>Payee_Email__c</fullName>
    <description>Payee Email to send Invoice notification</description>
    <label>Payee Email</label>
    <type>Email</type>
</CustomField>