force-app/main/default/objects/Proposal_Invoice__c/fields/Payee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Payee_Notes__c</fullName>
    <description>Payee Notes; available for Project Manager or Admin view in case of Payment Assignment projects.</description>
    <label>Payee Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>