force-app/main/default/objects/Proposal_Invoice__c/fields/Payment_Count_Total__c.field-meta.xml
<CustomField>
    <fullName>Payment_Count_Total__c</fullName>
    <label>Payment Count Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>