force-app/main/default/objects/Proposal_Invoice__c/fields/Project_Activity_Invoice_Month__c.field-meta.xml
<CustomField>
    <fullName>Project_Activity_Invoice_Month__c</fullName>
    <label>Project Activity Invoice Month</label>
    <type>Date</type>
</CustomField>