force-app/main/default/objects/Proposal_Invoice__c/fields/Project_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Invoice_Number__c</fullName>
    <description>The ordinal number of this invoice for the project, starting with 1</description>
    <inlineHelpText>The ordinal number of this invoice for the project, starting with 1</inlineHelpText>
    <label>Project Invoice Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>