force-app/main/default/objects/Proposal_Invoice__c/fields/Resubmitted_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Resubmitted_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check true if the invoice is submitted again.</description>
    <label>Resubmitted Invoice</label>
    <type>Checkbox</type>
</CustomField>