force-app/main/default/objects/Proposal_Invoice__c/fields/Retainage_Held__c.field-meta.xml
<CustomField>
    <fullName>Retainage_Held__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retainage Held</label>
    <type>Checkbox</type>
</CustomField>