force-app/main/default/objects/Proposal_Invoice__c/fields/Signing_Date__c.field-meta.xml
<CustomField>
    <fullName>Signing_Date__c</fullName>
    <label>Signing Date</label>
    <type>DateTime</type>
</CustomField>