force-app/main/default/objects/Proposal_Invoice__c/fields/SpecialHandling__c.field-meta.xml
<CustomField>
    <fullName>SpecialHandling__c</fullName>
    <description>Field for Voucher txt file</description>
    <formula>&quot;N&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpecialHandling</label>
    <type>Text</type>
</CustomField>