force-app/main/default/objects/Proposal_Invoice__c/fields/Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Status_Notes__c</fullName>
    <description>Enter in a reason for the status change. Primarily used for entering a cancel/reject reason.</description>
    <inlineHelpText>Enter in a reason for the status change. Primarily used for entering a cancel/reject reason.</inlineHelpText>
    <label>Status Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>