force-app/main/default/objects/Proposal_Invoice__c/fields/Supplier_ID__c.field-meta.xml
<CustomField>
    <fullName>Supplier_ID__c</fullName>
    <description>Supplier ID: To be populated via ZEV Invoice Page. T-01644/S-00402</description>
    <label>Supplier ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>