force-app/main/default/objects/Proposal_Invoice__c/fields/Supplier_ID_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Supplier_ID_Formatted__c</fullName>
    <description>S-00402: Supplier ID needs to have leading zeros so that the length is always 10</description>
    <formula>LPAD( Supplier_ID__c , 10, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier ID</label>
    <type>Text</type>
</CustomField>