force-app/main/default/objects/Proposal_Invoice__c/fields/Terms_Condition__c.field-meta.xml
<CustomField>
    <fullName>Terms_Condition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms &amp; Condition</label>
    <type>Checkbox</type>
</CustomField>