force-app/main/default/objects/Proposal_Invoice__c/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <description>Total Amount Paid: NEIS Sync script will sum up paid amount from NEIS and update this field.</description>
    <label>Total Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>