force-app/main/default/objects/Proposal_Invoice__c/fields/Total_Retainage_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Retainage_Amount__c</fullName>
    <label>Total Retainage Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>