force-app/main/default/objects/Proposal_Invoice__c/fields/Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Update_Status__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Id &amp; &quot;/e?nooverride=1&quot;,
&quot;Link&quot;)


/*Use Standard version for situations of Difference in Amount only*/
/*TBD: IF(NOT(PO_and_Incentive_Amount_Validated__c),&quot;/e?nooverride=1&quot;,&quot;&quot;)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Update Status</label>
    <type>Text</type>
</CustomField>